add smart choice to cluster and output file on main